# covid-sym

./: manage.py  pyproject.toml
coronavirus_mapper/: asgi.py  settings.py  urls.py  wsgi.py
reports/: admin.py  api.py  models.py  serializers.py  urls.py
reports/migrations/: 0001_report.py
reports/static/js/reports/: reports.js
reports/templates/reports/: map.html
