[tool.poetry]
name = "coronavirus_mapper"
version = "0.1.0"
description = ""
authors = ["Sabri Al-Ozairi <sabrisabah78@gmail.com>"]
license = "AGPL-3-0-or-later"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "autopep8"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
